gccida/c1/ix86_expand_move
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_move/src/i386.c:7235:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  ix86_expand_move( machine_mode mode, rtx *operands) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_move/src/i386.c:7259:30: error: use of undeclared identifier 'machine_mode'
if ( symbolic_operand( v5, ( machine_mode)operands) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_move/src/i386.c:7267:19: error: use of undeclared identifier 'machine_mode'
v8 = force_reg( ( machine_mode)v4, v5); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_move/src/i386.c:7270:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_reg_rtx( ( machine_mode)v4); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_move/src/i386.c:7309:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_move/src/obj/i386.o] Error 1
